Fix the unread counts being unreadable on non-retina displays.

--- a/oneflow/core/static/sass/_selector.scss
+++ b/oneflow/core/static/sass/_selector.scss
@@ -535,7 +535,7 @@ $folder-border-width-default: 2px;
 
 .unread-count {
     font-weight: 400;
-    opacity: 0.33;
+    opacity: 0.4;
 }
 
 .is_closed {
